# gta2remake

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_windows.bat  claude's plan.txt
assets/data/: vehicles.txt
assets/sprites/: SPRITES_GUIDE.txt
src/: main.cpp
src/ai/: pedestrian_ai.cpp  pedestrian_ai.h  police_ai.cpp  police_ai.h  traffic_ai.cpp  traffic_ai.h
src/core/: camera.cpp  camera.h  game.cpp  game.h  input.cpp  input.h  sprite.cpp  sprite.h  timer.h  window.cpp  window.h
src/entities/: entity.cpp  entity.h  explosion.cpp  explosion.h  pedestrian.cpp  pedestrian.h  pickup.cpp  pickup.h  player.cpp  player.h  projectile.cpp  projectile.h  vehicle.cpp  vehicle.h
src/physics/: collision.cpp  collision.h  vehicle_physics.cpp  vehicle_physics.h
src/systems/: score_system.cpp  score_system.h  wanted_system.cpp  wanted_system.h  weapon_system.cpp  weapon_system.h
src/ui/: menu.cpp  menu.h
src/util/: math_utils.h
src/world/: collision_grid.cpp  collision_grid.h  map.cpp  map.h  spawn_manager.cpp  spawn_manager.h  tile.h  traffic_manager.cpp  traffic_manager.h
